other/restrict-ingress-host/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: unique-ingress-host
  rules:
  - name: check-single-host-create
    values:
      hosts: '["www.github.com", "www.kyverno.com", "www.nirmata.com"]'
